--- a/Projekt_Fronted/index3.html
+++ b/Projekt_Fronted/index3.html
@@ -14,41 +14,97 @@
 
 	<div id="container">
 
-        <div id="Sklep">
-            <a>Sklep Samochodzik</a>
-        </div>
-        <div id="login_1">
-            <ul>
-                <li><a href="#">ZALOGUJ SIĘ</a></li>
-            </ul>
-        </div>       
-        <div id="login_2">
-            <ul>
-                <li><a href="#">ZAREJESTRUJ SIĘ</a></li>
+    <div id="Sklep">
+      <a href="index.html"></a><img src="images/super_logo.png" style="width:25%"></a>
+    <div id="login_1">
+        <ul>
+            <li><a href="#">ZALOGUJ SIĘ</a></li>
+        </ul>  
+    <div id="login_2">
+        <ul>
+            <li><a href="#">ZAREJESTRUJ SIĘ</a></li>
+        </ul>
+    </div>
+    </div>
+    <div id="header_menu">
+      <ul>
+          <li><a href="index.html">Strona główna</a></li>
+            <li><a href="index2.html">Wyszukiwarka</a></li>
+            <li><a href="index3.html">Kontakt</a></li>
+        </ul>
+    </div>
 
-            </ul>
-        </div>
-        <div id="header_menu">
-        	<ul>
-            	<li><a href="index.html">Strona główna</a></li>
-                <li><a href="index2.html">Wyszukiwarka</a></li>
-                <li><a href="index3.html">Kontakt</a></li>
-            </ul>
-        </div>
-        <div id="banner">
-            <img src=""/>
-        </div>
+    
+
+ <!-- Slideshow -->
+ <div class="slideshow">
+
+    <!-- Full-width images with number and caption text -->
+    <div class="mySlides fade">
+      <img src="images/baner1a.jpg" style="width:100%">
+
+    </div>
+  
+    <div class="mySlides fade">
+      <img src="images/baner2a.jpg" style="width:100%">
+
+    </div>
+  
+    <div class="mySlides fade">
+      <img src="images/baner3.jpg" style="width:100%">
+
+    </div>
+  
+    <!-- Next and previous buttons -->
+    <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+    <a class="next" onclick="plusSlides(1)">&#10095;</a>
+  </div>
+  <br>
+  
+  <!-- The dots/circles -->
+  <div style="text-align:center">
+    <span class="dot" onclick="currentSlide(1)"></span>
+    <span class="dot" onclick="currentSlide(2)"></span>
+    <span class="dot" onclick="currentSlide(3)"></span>
+  </div> 
+
+
 	</div>
     <hr/>
 
 
-
+    <div id="map">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d9268.888865284103!2d18.5388193!3d54.4943036!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x2a1b60d415539d45!2sSoftware%20Development%20Academy!5e0!3m2!1spl!2spl!4v1614875357350!5m2!1spl!2spl" width="500" height="350" style="border: 0;" allowfullscreen="" loading="lazy"></iframe>
+        <div id="contacts">
+          <p>&nbsp;</p>
+          <p>&nbsp;</p>
+          <p>&nbsp;</p>
+          <p>&nbsp;</p>
+          <p>&nbsp;</p>
+            <p><b>&nbsp; &nbsp; &nbsp; Adres:</b> Al. Zwycięstwa 96/98 Gdynia</p>
+            <p><b>&nbsp; &nbsp; &nbsp; Telefon:</b> +48 58 782 48 88</p>
+            <p><b>&nbsp; &nbsp; &nbsp; E-mail:</b> info@sdacademy.pl</p>
+            </div>
+        </div>
+    
+<hr>
     <div id="footer">
         <p>
         <a href="https://sdacademy.pl/" > Software Development Academy</a>
         </p>
     </div>
+
+    <button onclick="myFunction()">Toggle dark mode</button>
+
+    <script>
+    function myFunction() {
+       var element = document.body;
+       element.classList.toggle("dark-mode");
+    }
+    </script>
+
     </div>
     </div>
+    <script src="./index.js"></script>
 </body>
 </html>
