--- a/Projekt_Fronted/index2.html
+++ b/Projekt_Fronted/index2.html
@@ -73,7 +73,17 @@
 	</div>
     <hr/>
 
+    
 
+    <table cellspacing="0"  cellpadding="20" border=1 >
+      <thead>
+         <tr> <th width="250px"> Zdjęcie twojej super bryki <th width="500px">Specyfikacje <th > przycisk
+      <tbody>
+         <tr> <th> <img src="images/car1.jpg" width="100%"/> <td> specyfikacje <td>&#10133 </td>
+         <tr> <th> <img src="images/car2.jpg" width="100%"/><td> specyfikacje <td>przycisk</td>
+         <tr> <th> <img src="images/car.jpg" width="100%"/>  <td> specyfikacje <td>przycisk</td>
+         <tr> <th> zdj4  <td> specyfikacje <td>przycisk</td>
+   </table>
 
     <div id="footer">
         <p>
